<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#DEF2ED"
    tools:context=".EditProfileActivity">

    <TextView
        android:id="@+id/logo3"
        android:layout_width="271dp"
        android:layout_height="44dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/lobster_two_bold_italic"
        android:text="@string/app_title"
        android:textAlignment="center"
        android:textColor="@color/title_color"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/back3"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/back3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="12dp"
        android:backgroundTint="#DEF2ED"
        android:contentDescription="@string/back"
        android:minHeight="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="?attr/actionModeCloseDrawable"
        tools:ignore="SpeakableTextPresentCheck" />

    <LinearLayout
        android:layout_width="367dp"
        android:layout_height="336dp"
        android:layout_marginStart="23dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="186dp"
        android:background="@drawable/rounded_corners"
        android:orientation="vertical"
        android:padding="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo3"
        app:layout_constraintVertical_bias="0.558">

        <EditText
            android:id="@+id/editTextTextPersonName"
            android:layout_width="match_parent"
            android:layout_height="83dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/fname" />

        <EditText
            android:id="@+id/editTextTextPersonName3"
            android:layout_width="match_parent"
            android:layout_height="79dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/lname" />

        <EditText
            android:id="@+id/editTextTextPersonName4"
            android:layout_width="match_parent"
            android:layout_height="79dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/phone" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="61dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/title_color"
                android:backgroundTint="@color/title_color"
                android:text="@string/save" />

            <Button
                android:id="@+id/button6"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/cancel" />
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>