<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#DEF2ED"
    android:textAlignment="center"
    tools:context=".MenuActivity">

    <Button
        android:id="@+id/allposts"
        android:layout_width="283dp"
        android:layout_height="63dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="23dp"
        android:backgroundTint="#FFFFFF"
        android:fontFamily="@font/montserrat"
        android:text="@string/allPosts"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/found" />

    <Button
        android:id="@+id/lost"
        android:layout_width="283dp"
        android:layout_height="63dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="147dp"
        android:backgroundTint="#FFFFFF"
        android:fontFamily="@font/montserrat"
        android:text="@string/lost"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo" />

    <Button
        android:id="@+id/found"
        android:layout_width="283dp"
        android:layout_height="63dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="26dp"
        android:backgroundTint="#FFFFFF"
        android:fontFamily="@font/montserrat"
        android:text="@string/found"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lost" />

    <TextView
        android:id="@+id/logo"
        android:layout_width="177dp"
        android:layout_height="45dp"
        android:layout_marginStart="63dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/lobster_two_bold_italic"
        android:text="@string/app_title"
        android:textAlignment="center"
        android:textColor="@color/title_color"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/back"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginTop="9dp"
        android:backgroundTint="#DEF2ED"
        android:contentDescription="@string/back"
        android:minHeight="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="?attr/actionModeCloseDrawable"
        tools:ignore="SpeakableTextPresentCheck" />

    <ImageButton
        android:id="@+id/profilePic"
        android:layout_width="51dp"
        android:layout_height="48dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="9dp"
        android:layout_marginBottom="151dp"
        android:contentDescription="@string/profilepicture"
        app:layout_constraintBottom_toTopOf="@+id/lost"
        app:layout_constraintStart_toEndOf="@+id/logo"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/person"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/logout2"
        android:layout_width="151dp"
        android:layout_height="56dp"
        android:layout_marginStart="130dp"
        android:layout_marginBottom="1dp"
        android:backgroundTint="#FFFFFF"
        android:fontFamily="@font/montserrat"
        android:text="@string/logout"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>