<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#DEF2ED"
    android:backgroundTint="#DEF2ED"
    tools:context=".UserProfileActivity">

    <Button
        android:id="@+id/button9"
        android:layout_width="283dp"
        android:layout_height="63dp"
        android:layout_marginStart="64dp"
        android:layout_marginBottom="70dp"
        android:backgroundTint="#FFFFFF"
        android:fontFamily="@font/montserrat"
        android:text="@string/edit"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/button8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo2"
        app:layout_constraintVertical_bias="0.303" />

    <Button
        android:id="@+id/button10"
        android:layout_width="283dp"
        android:layout_height="63dp"
        android:layout_marginStart="64dp"
        android:layout_marginBottom="70dp"
        android:backgroundTint="#FFFFFF"
        android:fontFamily="@font/montserrat"
        android:text="@string/myposts"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/button8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo2"
        app:layout_constraintVertical_bias="0.48" />

    <Button
        android:id="@+id/button11"
        android:layout_width="283dp"
        android:layout_height="63dp"
        android:layout_marginStart="64dp"
        android:layout_marginBottom="70dp"
        android:backgroundTint="#FFFFFF"
        android:fontFamily="@font/montserrat"
        android:text="@string/saved"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/button8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo2"
        app:layout_constraintVertical_bias="0.661" />

    <Button
        android:id="@+id/button8"
        android:layout_width="151dp"
        android:layout_height="56dp"
        android:layout_marginStart="130dp"
        android:layout_marginBottom="1dp"
        android:backgroundTint="#FFFFFF"
        android:fontFamily="@font/montserrat"
        android:text="@string/logout"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/profilePic2"
        android:layout_width="51dp"
        android:layout_height="48dp"
        android:layout_marginEnd="4dp"
        android:contentDescription="@string/profilepicture"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/person"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/logo2"
        android:layout_width="412dp"
        android:layout_height="46dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="48dp"
        android:fontFamily="@font/lobster_two_bold_italic"
        android:text="@string/app_title"
        android:textAlignment="center"
        android:textColor="@color/title_color"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.51" />

    <ImageButton
        android:id="@+id/back2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:backgroundTint="#DEF2ED"
        android:contentDescription="@string/back"
        android:minHeight="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="?attr/actionModeCloseDrawable"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="117dp"
        android:layout_height="38dp"
        android:layout_marginStart="147dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="147dp"
        android:layout_marginBottom="50dp"
        android:text="@string/myprofile"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/button9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo2" />

</androidx.constraintlayout.widget.ConstraintLayout>